Add more project images; flesh out projects page

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
             <p>I'm skilled in applied mathematics, physics (quantum, optics, etc.), software optimization, machine learning, and website/content design—I'm always striving to learn new things, so that the Howard of tomorrow can be better than the Howard of today.</p>
 
+            <p>Outside of academics, I currently serve as the treasurer for the UBC Mahjong Club, and I am also a proud member of the UBC PHAS Equity, Diversion, and Inclusion (EDI) committee.</p>
+
             <br>
             <p>While you're here, why not take a look at my projects below (or head over to the <a href="src/projects.html">projects</a> page)?</p>
 
