Finish up index and project pages; ready to publish?

--- a/src/projects.html
+++ b/src/projects.html
@@ -20,7 +20,7 @@
         <div class="page-body">
             <div class="top-buttons">
                 <a href="resume.pdf" class="button" target="_blank">Resume</a>
-                <a href="../index.html" class="button">Back</a>
+                <a href="../index.html" class="button">Home</a>
                 <a href="https://www.linkedin.com/in/howard-ubceng26/" class="button" target="_blank">LinkedIn</a>
                 <a href="mailto:howard.li.2718@gmail.com" class="button2">howard.li.2718@gmail.com</a>
             </div>
@@ -35,7 +35,7 @@
 
             <div class="project-menu">
                 <button class="project-button">Japanese Language-Learning Blog</button>
-                <div class="panel">
+                <div id="jznr" class="panel">
                     <p><b>Description:</b> An individual project, designing a website using the VitePress static site generator to host a blog dedicated to Japanese language acquisition.</p>
                     <p>Being an individual project, I was responsible for all tasks, including writing code, troubleshooting, writing the blog contents, preparing media files, and so on.</p>
                     <p></p>
