--- a/src/projects.html
+++ b/src/projects.html
@@ -19,7 +19,7 @@
 
         <div class="page-body">
             <div class="top-buttons">
-                <a href="resume.pdf" class="button" target="_blank">Resume</a>
+                <a href="/portfolio/resume.pdf" class="button" target="_blank">Resume</a>
                 <a href="../index.html" class="button">Home</a>
                 <a href="https://www.linkedin.com/in/howard-ubceng26/" class="button" target="_blank">LinkedIn</a>
                 <a href="mailto:howard.li.2718@gmail.com" class="button2">howard.li.2718@gmail.com</a>
